--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "npm": "^6.14.4",
     "react": "^16.13.1",
+    "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "timeago.js": "^4.0.2",
+    "toastr": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
